# wasm_minigames

./: .gitignore  .travis.yml  404.html  Makefile  README.md  a_first_game_swoop.html  book.toml  custom.css  custom.js  example.html  index.html  print.html  searchindex.js  searchindex.json  stl_viewer.html  the_basics.html  what_its_all_about.html
.github/workflows/: makefile.yml
a_first_shader/: index.html
a_first_shader/pkg/: a_first_shader.js  a_first_shader_bg.wasm  index.html  package.json
a_first_shader/src/: app.rs
binding_events/: Cargo.toml  index.html
binding_events/pkg/: binding_events.js  binding_events_bg.wasm  index.html  package.json
binding_textures/: index.html
binding_textures/pkg/: binding_textures.js  binding_textures_bg.wasm  index.html  package.json
binding_textures/src/: lib.rs
building_and_loading_wasm/: index.html
building_and_loading_wasm/pkg/: building_and_loading_wasm.js  building_and_loading_wasm_bg.wasm  index.html  package.json
building_and_loading_wasm/src/: lib.rs
cancel_load_animation/: index.html
cancel_load_animation/pkg/: cancel_load_animation_bg.wasm  index.html  package.json
fixing_resolution/: index.html
fixing_resolution/pkg/: fixing_resolution.js  fixing_resolution_bg.wasm  index.html  package.json
fixing_resolution/src/: triangle.rs
games/a_first_shader/: Makefile
games/cancel_load/: Makefile
games/trivial/: Makefile
passing_in_uniforms/: index.html
passing_in_uniforms/pkg/: index.html  package.json  passing_in_uniforms.js  passing_in_uniforms_bg.wasm
passing_in_uniforms/src/: app.rs
src/: SUMMARY.md  stl_viewer.md  what_its_all_about.md
src/a_first_shader/: Cargo.toml  core.js
src/basics/: Cargo.toml
src/basics/cancel_load_animation/: Cargo.toml
src/basics/cancel_load_animation/src/: lib.rs
src/binding_events/: core_bg.wasm
src/binding_textures/: Cargo.toml  core.js  core_bg.wasm  index.md
src/swoop_drawing_the_map/: Cargo.toml  index.md
src/swoop_drawing_the_map/src/: app.rs  lib.rs  map_sprite.rs  shader.rs  ship_sprite.rs
src/swoop_drawing_the_map/src/resources/: map.frag  map_fourier_1.frag
src_book/: .gitignore  SUMMARY.md  book.toml
src_rust/: Cargo.toml
src_rust/basics/a_first_shader/: Cargo.toml
src_rust/basics/a_first_shader/src/: app.rs  lib.rs
src_rust/basics/passing_in_uniforms/: Cargo.toml
src_rust/basics/passing_in_uniforms/src/: lib.rs  quad.rs
src_rust/basics/passing_in_uniforms/src/resources/: shader.frag
src_rust/in_the_air/basics/: Cargo.toml
src_rust/in_the_air/basics/src/: app.rs  lib.rs  renderer.rs  shader.rs
src_rust/in_the_air/faster_clouds/: Cargo.toml
src_rust/in_the_air/faster_clouds/src/app/: attributes.rs  keyboard.rs  mod.rs  texture.rs
src_rust/in_the_air/faster_clouds/src/app/renderer/: mod.rs  pipeline.rs  setup.rs
src_rust/in_the_air/faster_clouds/src/app/resources/: common.frag  mod.rs  passthrough.frag  volume.frag  volume_and_light.frag
src_rust/in_the_air/faster_clouds/src/app/resources/blends/: vehicle.blend
src_rust/pilot/pilot_resource_management/: Cargo.toml  build.rs
src_rust/pilot/pilot_resource_management/src/: app.rs  camera.rs  geometry.rs  lib.rs  mesh.rs  shader.rs  shader_stl.rs  texture.rs
src_rust/pilot/pilot_resource_management/src/resources/: mod.rs
src_rust/pilot/pilot_resource_management/src/resources/raw/: background.vert  model.frag  model.vert  other_assets_fuel_tank.mesh  other_assets_landing_lights.mesh  other_assets_landing_pad.mesh  other_assets_light_truss.mesh  quad_quad.mesh  vehicle_chassis.mesh  vehicle_cockpit_frame.mesh  vehicle_dashboard.mesh  vehicle_glass.mesh  vehicle_overhead_panel.mesh
src_rust/pilot/pilot_resource_management/src/resources/raw/blends/: export.py  other_assets.blend  vehicle.blend
static/: example.html  example.js
stl_viewer_background/: index.html
stl_viewer_camera_lookaround/: index.html
stl_viewer_load_stl/: index.html
swoop_camera_positioning/: index.html
swoop_counting_laps/: index.html
swoop_drawing_the_map/: index.html
swoop_drawing_the_player/: index.html
swoop_enemy_racers/: index.html
swoop_engine_trails/: index.html
swoop_map_generation/: index.html
swoop_ship_collision_physics/: Cargo.toml  index.html
swoop_ship_keyboard_input/: index.html
swoop_ship_motion_physics/: index.html
swoop_ship_spawn_points/: index.html
swoop_start_sequence/: index.html
swoop_win_condition/: index.html
swoop_wingtip_trails/: index.html
website/: custom.css  custom.js
(+615 files in other folders)
