[package]
name = "swoop_drawing_the_map"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.63"
js-sys="0.3.40"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    'Performance',
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlUniformLocation",
    "Window",
]
