[package]
name = "passing_in_uniforms"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.69"
js-sys="0.3.40"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Event",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyEvent",
    "MouseEvent",
    'Performance',
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlUniformLocation",
    "Window",
]
